fix: install pnpm

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-oauth/google": "^0.12.2",
-    "@stripe/stripe-js": "^7.8.0",
+    "@stripe/react-stripe-js": "^4.0.2",
+    "@stripe/stripe-js": "^7.9.0",
     "@tanstack/react-query": "^5.83.0",
     "@vitejs/plugin-react": "^5.0.2",
     "axios": "^1.11.0",
@@ -53,6 +54,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "pnpm": "^10.17.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
